<resources>
    <string name="app_name">Expenses</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="net_balance">NET BALANCE</string>
    <string name="before_you_begin">Before you Begin...</string>
    <string name="name">Name</string>
    <string name="salary">Monthly Income</string>
    <string name="save">Save</string>
    <string name="budget">Monthly Budget</string>
    <string name="comments">Comments</string>
    <string name="dummy_date">9/June</string>
    <string name="month_dummy">Month</string>
    <string name="item_dummy">Item</string>
    <string name="add_month_card">Add Month</string>
    <string name="money">Money</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_details">Transaction Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
