<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    android:padding="32dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:shadowColor="@color/colorTextShadow"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_header"
        app:layout_constraintTop_toBottomOf="@+id/title_header"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="22sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/amount_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorTextShadow"
        android:textColor="@color/colorPrimary"
        android:text="@string/amount"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/amount_header"
        app:layout_constraintTop_toBottomOf="@+id/amount_header"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="22sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorTextShadow"
        android:textColor="@color/colorPrimary"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date_header"
        app:layout_constraintTop_toBottomOf="@+id/date_header"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="22sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/comments_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorTextShadow"
        android:textColor="@color/colorPrimary"
        android:text="@string/comments"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comments_header"
        app:layout_constraintTop_toBottomOf="@+id/comments_header"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="22sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_income"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_solid"
        android:text="@string/income"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/add_expense"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_solid"
        android:text="@string/expense"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/add_income"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/add_income" />

</androidx.constraintlayout.widget.ConstraintLayout>